# fantasy-rl

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  train_dqn.py  train_ppo.py  train_reinforce.py  train_sarsa.py  trained_model.pth  update.py
DQN/: agent.py  network.py  train.py
PPO/: agent.py  networks.py  train.py
SARSA/: n_step_sarsa.py
actions/: update.py
algorithms/DQN/: agent.py  network.py  train.py
algorithms/PPO/: agent.py  networks.py  train.py
algorithms/REINFORCE/: train.py
algorithms/SARSA/: n_step_sarsa.py  train.py
api/: __init__.py  main.py
api/common/static/: players.json  players_full.json  teams.json  teams_full.json
api/common/static/23-24/: players.json  players_full.json  teams.json  teams_full.json
api/common/utils/: ApiConfig.py  DictStack.py
api/src/managers/: FileManager.py  RequestManager.py
api/src/services/: BaseService.py  MarketService.py  PlayersService.py  TeamsService.py
docs/: chats.md  prompt.md  reward.md
environment/: __init__.py  environment.py  factory.py  market.py  market_v2.py  player.py  team.py
environment/v2/: market_v2.py
pipeline/: __init__.py  main.py
train/: train_dqn.py  train_reinforce.py  train_sarsa.py
